поправляет mobile styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- Кнопка открытия мобильного меню -->
                 <button class="menu-toggle-open js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                     <svg  width="50" height="50">
-                        <use href="./img/sprite.svg#icon-burger"></use>
+                        <use class="icon-burger" href="./img/sprite.svg#icon-burger"></use>
                     </svg>
                 </button>
                 <!-- Мобильное меню -->
